# eaburns.space

./: AUTHORS  ChangeLog  Makefile.am  README  THANKS  configure.in  reconf
blender/: dart.blend  fighter.blend  moon1.blend
data/: Makefile.am  Makefile.in  bullets.xml  ships.xml
data/levels/: level1.xml
src/: Makefile.am  Makefile.in  arguments.c  arguments.h  bullet.c  bullet.h  bullet_types.c  bullet_types.h  color.c  color.h  config.h.in  data.c  data.h  enemy.c  enemy.h  explosion.c  explosion.h  font.c  font.h  fps.c  fps.h  gameover.c  gameover.h  level.c  level.h  lifebar.c  lifebar.h  m_pattern.c  m_pattern.h  main.c  planet.c  planet.h  score.c  score.h  sdl.c  sdl.h  ship.c  ship.h  ship_types.c  ship_types.h  (+11 more)
